src/modules/assets/style.css
.assets-form {
    max-width: 100%;
    overflow-x: auto;
}
.assets-form .button {
    white-space: nowrap;
}

.assets-form .portfolio {
    margin-top: -5px;
    padding: 0 10px;
    width: 75%
}
body:not(.mobile) .assets-form .portfolio {
    min-width: 550px;
}
body.mobile .assets-form .portfolio {
    margin-top: -20px;
    width: 100%;
    /* min-width: 80%; */
}
.assets-form .hide-on-desktop,
body.mobile .assets-form .hide-on-mobile {
    display: none;
}

.assets-form .portfolio-line:only-child .remove-asset,
body:not(.mobile) .assets-form .portfolio-line .action .divider,
.assets-form .portfolio-line:not(:last-child) .add-asset { 
    display: none !important;
}
.assets-form .portfolio-line {
    display: block;
}
.assets-form .portfolio-line .action {
    padding: 27px  5px 0 5px;
}
body.mobile .assets-form .portfolio-line .action {
    display: inline-block;
    padding: 0 10px 10px;
    text-align: center;
    width: 100%
}
body:not(.mobile) .assets-form .action .button span {
    display: none;
}
body:not(.mobile) .assets-form .action .icon {
    margin: 0 !important;
}
body:not(.mobile) .assets-form .action .button {
    padding: 10px;
}

.assets-form .total-assets {
    font-weight: 400px;
    font-size: 25px;
    padding-left: 10px;
    width: 50%;
}
.assets-form .total-form {
    padding: 0 10px;
    width: 50%;
}
body.mobile .assets-form .total-form,
body.mobile .assets-form .total-assets {
    padding: 0 10px;
    width: 100%;
}

body.mobile .assets-form .sixteen.wide.field.btn-add,
body.mobile .assets-form .sixteen.wide.field.btn-subtract {
    display: inline-block;
    width: 50% !important;
}

@media only screen and (min-width : 360px)  {
    body.mobile .assets-form .portfolio .form-group > .field:not(:first-child) {
        display: inline-block !important;
        width: calc( 100% - 197px ) !important;
    }

    body.mobile .assets-form .portfolio .form-group > .field:last-child {
        width: 197px !important;
    }
}

